2006-01-10  Florian Boor <florian.boor@kernelconcepts.de>

    * main.c (create_app_menu): Make a shiny new menu according to the UI
    guidelines.
    * day_view.c: Another try to make updating faster and more efficient.
    (update_hook_callback), (day_changed_calendar): Remove explicit call of 
    update functions, this is covered by changed callback.
    (reminder_view_expose): Reorder function calls/sanity check to avoid 
    segfault. 
    (day_view_init): Update view instead of creating a new one.
    * week_view.c (week_view): Change calendar size a bit, remove separator
    in Hildon env.
    * day_render.c: Remove unused code. Some indentation fixes.
    * main.c: (create_app_menu) Extend hildon menu. (toggle_menu) New function.

2006-01-09  Florian Boor <florian.boor@kernelconcepts.de>

    * day_view.c (day_page_calc_time_width): Increase size for maemo, no idea 
    why it does not work as expected here. 
    (day_page_draw_background): Add a one pixel sized gap before time labels.
    (day_view): Don't connect "changed" signal, seems to cause duplicated 
    updates resulting in flickering and slow performance.    
    Some minor formating fixes.
    * event_ui.c (build_edit_event_window): Use a different size for maemo.

2006-01-07  Phil Blundell  <pb@reciva.com>

	* day_view.c (day_page_draw_background): Fix two memory leaks.
	Use page->time_width, not ->time_col_ratio.  Remove unnecessary
	black line on left hand side to save horizontal real estate.
	Align time strings to the left rather than centering.
	(day_page_calc_time_width): New.
	(day_page_new): Call it.  Argument "time_col_ratio" deleted.
	(day_view): Update call to day_page_new.
	* day_view.h (struct day_page): Replace time_col_ratio with
	time_width.
	* day_render.h (day_render_update_offset): Likewise.	
	* day_render.c (day_render_new): Likewise.

2006-01-07  Phil Blundell  <pb@reciva.com>

	* day_view.c (scroll_to): Manually clamp value at upper limit to